# TronTest

./: Dockerfile  LICENSE  docker-compose.yml  openapi.json  pyproject.toml  readme.md  requirements.txt
alembic/: env.py
app/: logging_config.py  main.py
app/api/: tron_router.py
app/core/: cnf.py  database.py
app/crud/: request.py
app/models/: request.py
app/schemas/: request.py
app/services/: tron.py
tests/: conftest.py  test_db.py  test_post_endpoint.py
