[project]
name = "TronTest"
version = "0.1.0"
description = ""
authors = ["Ya(Anton T)"]
dependencies = [
    "fastapi>=0.110.0",
    "pydantic>=2.6.4",
    "sqlalchemy>=2.0.29",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "uvicorn>=0.29.0",
    "tronpy>=0.4.1",
    "python-dotenv>=1.0.1",
    "pydantic_setting",
    "python-decouple",
    "aiolimiter"
]

[optional-dependencies.dev]
pytest = "8.1.1"
httpx = "0.27.0"
pytest-asyncio = "0.23.6"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"